@@ -1,3 +1,6 @@
+2008-06-16 - Sean Huber (shuber@huberry.com)
+	* When a record's scope changes, a call to add_to_list_bottom is not made until the record is saved
+
 2008-06-15 - Sean Huber (shuber@huberry.com)
 	* Records do not automatically save on scope change
 
